--- a/RAGDotnetAIFundamentals.csproj
+++ b/RAGDotnetAIFundamentals.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.AI" Version="9.0.0-preview.9.24507.7" />
+    <PackageReference Include="Microsoft.Extensions.AI.Abstractions" Version="9.0.0-preview.9.24556.5" />
     <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.19.2" />
     <PackageReference Include="Microsoft.ML.OnnxTransformer" Version="4.0.0-preview.24522.7" />
     <PackageReference Include="Microsoft.ML.Tokenizers" Version="0.22.0-preview.24522.7" />
